# tuner.luma.dev

./: .gitignore  .prettierignore  Claude.md  eslint.config.js  index.html  package-lock.json  package.json  progress.txt  task-processing.md  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
dev/: 00-plan.md  01-fix.md  02-mic-select.md  03-ui.md  04-volume.md  05-dark.md  06-pwa.md  07-playback.md  08-site-name.md  09-auto-start.md  10-ci.md  11-eslint.md  12-fix-save.md  13-ui.md  14-menu.md  15-mic-auto-select.md  20-new-ideas.md  21-too-many-rerender.md  22-my-bpm.md  23-tool-silent.md
public/: CNAME
scripts/: agent-loop.sh
src/: App.tsx  index.css  vite-env.d.ts
src/components/: AdvancedSettingsDialog.tsx  AudioToolsPanel.tsx  ControlPanel.tsx  MicrophoneSelector.tsx  PitchInfo.tsx  RecordingList.tsx  SettingsDialog.tsx  StartOverlay.tsx  TunerDisplay.tsx  VolumeLevel.tsx  mode-toggle.tsx  theme-provider.tsx
src/constants/: audio.ts
src/hooks/: useAudioCapture.ts  useAudioInput.ts  useMetronome.ts  useMicSelectionState.tsx  useMicrophoneDevices.ts  usePitchDetection.ts  useRecordingBuffer.ts  useRecordingStorage.ts  useReferenceSound.ts  useSettings.tsx  useVolumeLevel.ts
src/lib/: bpmUtils.test.ts  bpmUtils.ts  durationUtils.test.ts  durationUtils.ts  micAutoSelect.test.ts  micAutoSelect.ts  noteUtils.ts
src/types/: index.ts  pitch_detector.d.ts
tasks/: inserted-tasks.md
tasks-archived/: inserted-tasks.md
wasm/pitch-detector/: Cargo.toml
wasm/pitch-detector/src/: lib.rs
(+5 files in other folders)
